ignore branch component, firstly do search service & search model for Asset and AssetType

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,8 @@
 
     <button style="margin: 50px;" *ngIf="router.url === '/'" type="button" routerLink="/employee"> Employees </button>
 
+    <button style="margin: 50px;" *ngIf="router.url === '/'" type="button" routerLink="/branch"> Branches </button>
+
   </div>
   <router-outlet></router-outlet>
 
