--- a/src/app/branch/branch.component.html
+++ b/src/app/branch/branch.component.html
@@ -1,3 +1,6 @@
+  
+  
+  
   <!----------------------BACK------------------------>
   <div class="button">
     <button routerLink='/'> Back </button>
@@ -96,7 +99,7 @@
                     </select> <br>
 
                   <div>
-                    <button  style="margin: 5px;" (click)="saveAsset(asset)"> Save </button>
+                    <button  style="margin: 5px;" (click)="saveBranch(asset)"> Save </button>
                     <button  style="margin: 5px;"> Delete </button>
                     <button  style="margin: 5px;"> Cancel </button>
                   </div>
@@ -111,4 +114,9 @@
     </div>
 
   </div>
+
+
+
+
+
 
