--- a/src/app/asset-type/asset-type.component.html
+++ b/src/app/asset-type/asset-type.component.html
@@ -39,8 +39,8 @@
       <!---------------------SEARCH BY ID-------------------->
       <div>
 
-        <button (click)="searchAssetTypeByName(searchTerm)" type="button" class="search-button" > Search </button>
-        <input type="text" placeholder="Id" class="search-input" [(ngModel)]="searchTerm">
+        <!-- <button (click)="searchAssetTypeDynamically(searchTerm)" type="button" class="search-button" > Search </button> -->
+        <input type="text" placeholder="Search Id / Name" class="search-input" (input)="searchAssetTypeDynamically(searchTerm)" [(ngModel)]="searchTerm">
 
         <br><br>
       </div>
