Added FormGroup on AssetType Added Lookup class for AssetType Added dynamic search for AssetType name & AssetType ID search
Fix AssetType post service for update & create

--- a/src/app/asset-type/asset-type.component.html
+++ b/src/app/asset-type/asset-type.component.html
@@ -15,81 +15,85 @@
 
 
 
-  <!---------------------VIEW LIST-------------------->
-  <div>
-    <button class="button" style="margin: 5px;" (click)="toggleList()"> View All Asset Types </button> <br>
-  </div>
+<!---------------------VIEW LIST-------------------->
+<div>
+  <button class="button" style="margin: 5px;" (click)="toggleList()"> View All Asset Types </button> <br>
+</div>
 
 
-  <!---------------------CREATE ASSET TYPE-------------------->
-  <div class="button2" >
-    <button style="margin: 5px;" (click)="createNewAssetType()"> Create New </button>
-  </div>
+<!---------------------CREATE ASSET TYPE-------------------->
+<div class="button2" >
+  <button style="margin: 5px;" (click)="createNewAssetType()"> Create New </button>
+</div>
 
-    <div *ngIf="canCreateNewAssetType">
-      <input #assetTypeName placeholder="Name" type="text" style="margin: 5px;">
-      <button (click)="submitNewAssetType(assetTypeName.value)" style="margin: 5px;"> Submit </button>
+<div *ngIf="canCreateNewAssetType">
+  <form [formGroup]="formModel">
+    
+    <input #assetTypeName formControlName="Name" placeholder="Name" type="text" style="margin: 5px;">
+
+    <div *ngIf="formModel.get('Name')?.touched && formModel.get('Name')?.invalid">
+      <small style="color: red;">Name is required</small>
     </div>
+
+    <button (click)="submitNewAssetType(assetTypeName.value)" [disabled]="formModel.invalid" style="margin: 5px;"> Submit </button>
+  
+  </form>
+</div>
 
 
 
   <!------------------------ASSET DETAILS----------------------------->
-    <div class="button" *ngIf="listHidden">
+<div class="button" *ngIf="listHidden">
 
-      <!---------------------SEARCH BY ID-------------------->
-      <div>
 
-        <!-- <button (click)="searchAssetTypeDynamically(searchTerm)" type="button" class="search-button" > Search </button> -->
-        <input type="text" placeholder="Search Id / Name" class="search-input" (input)="searchAssetTypeDynamically(searchTerm)" [(ngModel)]="searchTerm">
 
+
+  <!---------------------SEARCH BY ID-------------------->
+<div>
+  <br>
+  <input type="text" [(ngModel)]="assetTypelookup.id" placeholder="Search Id " class="search-input" (input)="searchAssetTypeDynamically()"  > <br><br>
+  <input type="text" [(ngModel)]="assetTypelookup.like" placeholder="Search Name" class="search-input" (input)="searchAssetTypeDynamically()"  >
+  <br><br>
+</div>
+
+<div *ngIf="searchInvalid" style="color: red;">
+  Asset Type not found in the list.
+</div>
+
+<ul style="display: inline-block; text-align: left;">
+    <li  *ngFor="let assetType of assetType">
+
+        <div *ngIf="!assetType.editing">
+          <b>ID:</b> {{assetType.id}} <br>
+          <b>NAME:</b> {{assetType.name}}
+          <div>
+            <button (click)="updateAssetType(assetType.id, assetType)" style="margin: 5px;"> Update </button>
+            <button (click)="deleteAssetType(assetType.id)" style="margin: 5px;"> Delete </button>
+          </div>
+        </div>
+
+
+
+        <div *ngIf="assetType.editing">
+          <b>ID:</b> {{assetType.id}} <br>
+          <b>NAME:</b>
+          <input [(ngModel)]="assetType.name" type="text" />
+
+          <div>
+            <button (click)="saveAssetType(assetType)" style="margin: 5px;"> Save </button>
+            <button (click)="deleteAssetType(assetType.id)" style="margin: 5px;"> Delete </button>
+            <button (click)="cancelUpdateAssetType(assetType)" style="margin: 5px;"> Cancel </button>
+          </div>
+        </div>
         <br><br>
-      </div>
 
-      <div *ngIf="searchInvalid" style="color: red;">
-        Asset Type not found in the list.
-      </div>
 
-      <ul style="display: inline-block; text-align: left;">
-          <li  *ngFor="let assetType of assetType">
+    </li>
+  </ul>
+</div>
 
 
 
-              <div *ngIf="!assetType.editing">
-                <b>ID:</b> {{assetType.id}} <br>
-                <b>NAME:</b> {{assetType.name}}
-
-                <div>
-                  <button (click)="updateAssetType(assetType.id, assetType)" style="margin: 5px;"> Update </button>
-                  <button (click)="deleteAssetType(assetType.id)" style="margin: 5px;"> Delete </button>
-                </div>
-
-              </div>
-
-
-
-              <div *ngIf="assetType.editing">
-                <b>ID:</b> {{assetType.id}} <br>
-                <b>NAME:</b>
-                <input [(ngModel)]="assetType.name" type="text" />
-
-                <div>
-                  <button (click)="saveAssetType(assetType)" style="margin: 5px;"> Save </button>
-                  <button (click)="deleteAssetType(assetType.id)" style="margin: 5px;"> Delete </button>
-                  <button (click)="cancelUpdateAssetType(assetType)" style="margin: 5px;"> Cancel </button>
-
-
-                </div>
-              </div>
-
-
-              <br><br>
-
-
-
-
-          </li>
-        </ul>
-  </div>
 
 </div>
 
