--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,9 @@
 
     <button style="margin: 50px;" *ngIf="router.url === '/'" type="button" routerLink="/employee"> Employees </button>
 
-    <button style="margin: 50px;" *ngIf="router.url === '/'" type="button" routerLink="/branch"> Branches </button>
+    <!-- <button style="margin: 50px;" *ngIf="router.url === '/'" type="button" routerLink="/branch"> Branches </button> -->
+
+    <button style="margin: 50px;" *ngIf="router.url === '/'" type="button" routerLink="/company"> Companies </button>
 
   </div>
   <router-outlet></router-outlet>
