--- a/src/app/asset/asset/asset.component.html
+++ b/src/app/asset/asset/asset.component.html
@@ -27,15 +27,36 @@
     </div>
 
       <div *ngIf="canCreateNewAsset">
-        <input #assetName placeholder="Name" type="text" style="margin: 5px;"> <br>
+
+        <form [formGroup]="formModel">
+    
+          <input #assetTypeName formControlName="Name" placeholder="Name" type="text" style="margin: 5px;">
+      
+          <div *ngIf="formModel.get('Name')?.touched && formModel.get('Name')?.invalid">
+            <small style="color: red;">Name is required</small>
+          </div>
+
+          <select #assetTypeId placeholder="Asset Type Id"  style="margin: 5px;">
+            <option *ngFor="let assetType of assetType">
+              {{assetType.id}}
+            </option>
+          </select>
+
+          <button (click)="submitNewAsset(assetTypeName.value, assetTypeId.value)" [disabled]="formModel.invalid" style="margin: 5px;"> Submit </button>
+        
+        </form>
+
+        <!-- <input #assetName placeholder="Name" type="text" style="margin: 5px;"> <br>
 
         <select #assetTypeId placeholder="Asset Type Id"  style="margin: 5px;">
           <option *ngFor="let assetType of assetType">
             {{assetType.id}}
           </option>
         </select>
+        
+        <br>
+        <button (click)="submitNewAsset(assetName.value, assetTypeId.value)" style="margin: 5px;"> Submit </button> -->
 
-        <br><button (click)="submitNewAsset(assetName.value, assetTypeId.value)" style="margin: 5px;"> Submit </button>
       </div>
 
 
@@ -43,14 +64,21 @@
     <!------------------------ASSET DETAILS----------------------------->
       <div class="button" *ngIf="listHidden">
 
-        <!---------------------SEARCH BY ID-------------------->
         <div>
+          <br>
+          <input type="text" [(ngModel)]="assetLookup.id" placeholder="Search Id " class="search-input" (input)="searchAssetDynamically()"  > <br><br>
+          <input type="text" [(ngModel)]="assetLookup.like" placeholder="Search Name" class="search-input" (input)="searchAssetDynamically()"  >
+          <br><br>
+        </div>
+
+        <!---------------------SEARCH BY ID-------------------->
+        <!-- <div>
 
           <button (click)="searchAssetById(searchTerm)" type="button" class="search-button" > Search </button>
           <input type="text" placeholder="Id" class="search-input" [(ngModel)]="searchTerm">
 
           <br><br>
-        </div>
+        </div> -->
         <!----------------------------------------------------->
 
         <div *ngIf="searchInvalid" style="color: red;">
@@ -90,7 +118,7 @@
                   <b> ASSET TYPE ID: </b>
 
                     <select>
-                      <option *ngFor="let assetType of assetType"> <!--???works without [value]-->
+                      <option *ngFor="let assetType of assetType">
                         {{assetType.id}}
                       </option>
                     </select> <br>
