Add AssetType ref to Asset model

--- a/src/app/asset/asset/asset.component.html
+++ b/src/app/asset/asset/asset.component.html
@@ -75,7 +75,7 @@
 
       <div [formGroup]="formModel">
 
-        <li *ngFor="let asset of asset">
+        <li [value]="" *ngFor="let asset of asset">
 
           <div *ngIf="!asset.editing">
 
