Improved list display after creation of an AssetType

--- a/src/app/asset-type/asset-type.component.html
+++ b/src/app/asset-type/asset-type.component.html
@@ -45,7 +45,7 @@
 
 
   <!------------------------ASSET DETAILS----------------------------->
-  <div class="button" *ngIf="listHidden">
+  <div class="button" *ngIf="!listHidden">
 
 
 
