--- a/src/app/asset/asset/asset.component.html
+++ b/src/app/asset/asset/asset.component.html
@@ -49,7 +49,7 @@
 
 
   <!----------------------ASSET DETAILS-------------------------->
-  <div class="button" *ngIf="listHidden">
+  <div class="button" *ngIf="!listHidden">
 
 
 
@@ -128,5 +128,9 @@
       </div>
     </ul>
   </div>
- 
+
+  <div *ngIf="!listHidden">
+    [Add Page Navigation Here Below List]
+  </div>
+
  </div>
