--- a/src/app/asset-type/asset-type.component.html
+++ b/src/app/asset-type/asset-type.component.html
@@ -50,26 +50,33 @@
 
 
 
-     <div>
+    <div>
       <br>
+
       <!---------------------SEARCH BY ID-------------------->
       <input type="text" [(ngModel)]="assetTypelookup.id" placeholder="Search Id " class="search-input"
         (input)="searchAssetTypeDynamically()"> <br><br>
+
+
+
 
       <!---------------------SEARCH BY NAME-------------------->
       <input type="text" [(ngModel)]="assetTypelookup.like" placeholder="Search Name" class="search-input"
         (input)="searchAssetTypeDynamically()"> 
       <br><br>
 
-      <!---------------------ORDER BY-------------------->
-      Order:
+
+
+
+      <!---------------------SORT-------------------->
+      Order: 
         <select (change)="setOrderItem($event)">
           <option  *ngFor="let name of controlNames">
             {{name | titlecase}}
           </option>
         </select>
 
-      By:
+      By:      
         <select (change)="setOrderBy($event)">
           <option [value]="true">
             Ascending
@@ -142,18 +149,18 @@
  
 
 </div>
-
-
+ 
 <div class="pagination-container" *ngIf="!listHidden" >
+  <app-pagination 
 
-  <button (click)="pageBack()" class="pagination"> &laquo; Back</button> 
+  [childPagesSum]="pagesSum" 
+  [childPageIndex]="index"
+  
+  (childEvent)="receivePageIndex($event)">
+  
+</app-pagination>
 
-  <div *ngFor="let page of [].constructor(pagesSum) ; let i = index"> 
-    <button  class="pagination" (click)="selectPage(i+1)"> {{i+1}} </button>
-  </div>
 
-  <button (click)="pageNext()" class="pagination"> &raquo; Next</button>
-
- </div> 
+</div>
 
  
